<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthActivity">

    <TextView
        android:id="@+id/order_detailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="35dp"
        android:text="@string/order_detail"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nama_pemesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/nama_pemesan"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_detailTitle" />

    <TextView
        android:id="@+id/nama_toko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="3dp"
        android:text="@string/storeTitle"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nama_pemesan" />

    <TextView
        android:id="@+id/isi_toko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/isi_toko_order"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/nama_toko"
        app:layout_constraintStart_toEndOf="@id/nama_toko" />

    <TextView
        android:id="@+id/isiOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="3dp"
        android:text="@string/isiOrder"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nama_toko" />

    <TextView
        android:id="@+id/pengirimanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/pengirimanTitle"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isiOrder" />

    <RadioGroup
        android:id="@+id/radioGrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/isiOrder"
        app:layout_constraintTop_toBottomOf="@id/pengirimanTitle"
        >
        <RadioButton
            android:id="@+id/ambil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_away"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/fastDeliver"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/fast_deliver"
            android:textSize="16sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@color/btn_color"
        android:text="@string/btn_done"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:backgroundTint="@color/btn_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGrup"/>

</androidx.constraintlayout.widget.ConstraintLayout>