<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">

    <TextView
        android:id="@+id/nama_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/img_detail"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_2"
        app:tint="#33D42F2F"
        app:tintMode="screen" />

    <TextView
        android:id="@+id/detalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="10dp"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/image1_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/detail_image"
        app:layout_constraintStart_toStartOf="@id/detail_image" />

    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginRight="5dp"
        android:text="@string/priceTitle"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/price"
        app:layout_constraintTop_toBottomOf="@id/detail_image" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginRight="25dp"
        android:text="@string/papperoni_price"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_image" />

    <TextView
        android:id="@+id/detail_desc"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:justificationMode="inter_word"
        android:text="@string/papperoni_detail_desc"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceTitle" />

    <Button
        android:id="@+id/btn_order"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/btn_color"
        android:text="Order Now"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/btn_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_desc"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/btn_color"
        android:text="Back"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        app:backgroundTint="@color/btn_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_order"/>
</androidx.constraintlayout.widget.ConstraintLayout>