<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">
    <ImageView
        android:id="@+id/icon_user"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/icon_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_icon" />

    <TextView
        android:id="@+id/user_icon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:text="@string/helloTitle"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/icon_user"
        app:layout_constraintStart_toEndOf="@id/icon_user"
        app:layout_constraintTop_toTopOf="@+id/icon_user" />

    <TextView
        android:id="@+id/nama_pemesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/nama_pemesan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/icon_user"
        app:layout_constraintStart_toEndOf="@id/user_icon_label"
        app:layout_constraintTop_toTopOf="@+id/icon_user" />

    <TextView
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="0sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/user_icon_label"
        tools:listitem="@layout/adapter_third"
        />

<!--    <LinearLayout-->
<!--        android:id="@+id/item1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="35dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingLeft="14dp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintTop_toBottomOf="@id/icon_user">-->
<!--        <ImageView-->
<!--            android:id="@+id/image1"-->
<!--            android:layout_width="121dp"-->
<!--            android:layout_height="121dp"-->
<!--            app:srcCompat="@drawable/papperoni_pizza" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginLeft="16dp">-->
<!--            <TextView-->
<!--                android:id="@+id/papperoniTitle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/image1_title"-->
<!--                android:textColor="@color/text_color"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="16sp"-->
<!--                />-->

<!--            <TextView-->
<!--                android:id="@+id/papperoniDesc"-->
<!--                android:layout_width="239dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/image1_desc"-->
<!--                android:textColor="@color/text_color"-->
<!--                android:textSize="16sp"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/item2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="35dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingLeft="14dp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintTop_toBottomOf="@id/item1">-->
<!--        <ImageView-->
<!--            android:id="@+id/image2"-->
<!--            android:layout_width="121dp"-->
<!--            android:layout_height="121dp"-->
<!--            app:srcCompat="@drawable/spaghetti" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginLeft="16dp">-->
<!--            <TextView-->
<!--                android:id="@+id/spaghettiTitle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/image2_title"-->
<!--                android:textColor="@color/text_color"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/spaghettiDesc"-->
<!--                android:layout_width="239dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/image2_desc"-->
<!--                android:textColor="@color/text_color"-->
<!--                android:textSize="16sp"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/item3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="35dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingLeft="14dp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintTop_toBottomOf="@id/item2">-->
<!--        <ImageView-->
<!--            android:id="@+id/image3"-->
<!--            android:layout_width="121dp"-->
<!--            android:layout_height="121dp"-->
<!--            app:srcCompat="@drawable/burger" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginLeft="16dp">-->
<!--            <TextView-->
<!--                android:id="@+id/burgerTitle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/image3_title"-->
<!--                android:textColor="@color/text_color"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/burgerDesc"-->
<!--                android:layout_width="239dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/image3_desc"-->
<!--                android:textColor="@color/text_color"-->
<!--                android:textSize="16sp"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/item4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="35dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingLeft="14dp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintTop_toBottomOf="@id/item3">-->
<!--        <ImageView-->
<!--            android:id="@+id/image4"-->
<!--            android:layout_width="121dp"-->
<!--            android:layout_height="121dp"-->
<!--            app:srcCompat="@drawable/steak" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginLeft="16dp">-->
<!--            <TextView-->
<!--                android:id="@+id/steakTitle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/image4_title"-->
<!--                android:textColor="@color/text_color"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/steakDesc"-->
<!--                android:layout_width="239dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/image4_desc"-->
<!--                android:textColor="@color/text_color"-->
<!--                android:textSize="16sp"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_tambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="31dp"
        android:src="@drawable/add_icon"
        android:tint="#FFFFFF"
        app:backgroundTint="@color/btn_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="38dp" />

</androidx.constraintlayout.widget.ConstraintLayout>